--- a/FE_9_4_homework_css-layouts/homework/index.html
+++ b/FE_9_4_homework_css-layouts/homework/index.html
@@ -47,7 +47,7 @@
       <article>
         <div class="imegeBlok">
           <span>januari'15 South France</span>
-          <span class="likeBlok opacity">172 &#9829</span>
+          <span class="likeBlok opacity">172 &#9829;</span>
         </div>
         <div class="textInBlok">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas natus quae officiis unde obcaecati doloribus odit reprehenderit consequatur voluptatibus itaque. Deleniti ipsum quia, suscipit sequi eligendi asperiores magni non.
@@ -56,7 +56,7 @@
       <article class="re">
           <div class="imegeBlok imegeBlok2">
             <span>januari'15 South America</span>
-            <span class="likeBlok opacity">172 &#9829</span>
+            <span class="likeBlok opacity">172  &#9829;</span>
           </div>
           <div class="textInBlok">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas natus quae officiis unde obcaecati doloribus odit reprehenderit consequatur voluptatibus itaque. Deleniti ipsum quia, suscipit sequi eligendi asperiores magni non.
@@ -65,7 +65,7 @@
       <article>
             <div class="imegeBlok">
               <span>januari'15 South France</span>
-              <span class="likeBlok opacity">20 &#9829</span>
+              <span class="likeBlok opacity">20 &#9829;</span>
             </div>
             <div class="textInBlok">
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas natus quae officiis unde obcaecati doloribus odit reprehenderit consequatur voluptatibus itaque. Deleniti ipsum quia, suscipit sequi eligendi asperiores magni non.
@@ -74,7 +74,7 @@
       <article class="re">
               <div class="imegeBlok imegeBlok2">
                 <span>januari'15 South America</span>
-                <span class="likeBlok opacity">150 &#9829</span>
+                <span class="likeBlok opacity">150 &#9829;</span>
               </div>
               <div class="textInBlok">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas natus quae officiis unde obcaecati doloribus odit reprehenderit consequatur voluptatibus itaque. Deleniti ipsum quia, suscipit sequi eligendi asperiores magni non.
